manifest/poller.yml
apiVersion: v1
kind: Service
metadata:
  name: sq-poller-headless
  labels:
    app: sq-poller
spec:
  clusterIP: None
  selector:
    app: sq-poller
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: sq-poller
  labels:
    app: sq-poller
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sq-poller
  serviceName: sq-poller-headless
  template:
    metadata:
      labels:
        app: sq-poller
        group: suzieq
    spec:
      securityContext:
        fsGroup: 1000
        fsGroupChangePolicy: "OnRootMismatch"
      affinity:
        podAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: group
                operator: In
                values:
                  - suzieq
            topologyKey: "kubernetes.io/hostname"
      containers:
        - name: poller
          image: netenglabs/suzieq:0.17.1
          command: ["sq-poller", "-I", "inventory.yml"]
          resources:
            requests:
              memory: "256Mi"
              cpu: "200m"
            limits:
              memory: "500Mi"
              cpu: "500m" 
          volumeMounts:
          - name: parquet
            mountPath: /home/suzieq/parquet
          - name: inventory
            mountPath: /home/suzieq/inventory.yml
            subPath: inventory.yml
          - name: sq-conf
            mountPath: /home/suzieq/.suzieq/suzieq-cfg.yml
            subPath: suzieq-cfg.yml
      volumes:
      - name: parquet
        persistentVolumeClaim:
          claimName: parquet-pvc
      - name: inventory
        configMap:
            name: sq-inventory
      - name: sq-conf
        configMap:
          name: sq-conf
